force-app/main/default/objects/Delivery_Item__c/Delivery_Item__c.object-meta.xml
<CustomObject>
    <label>Delivery Item</label>
    <nameField>
        <displayFormat>DI-{00000}</displayFormat>
        <label>Number Delivery Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Itens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>