force-app/main/default/objects/Delivery_Item__c/fields/DjFoodBankId__c.field-meta.xml
<CustomField>
    <fullName>DjFoodBankId__c</fullName>
    <label>DjFoodBankId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>