force-app/main/default/objects/Delivery_Item__c/fields/Storage_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Storage_Requirements__c</fullName>
    <label>Storage Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>